syntax = "proto3";
package kanthor.dataplane.v1;
option go_package = "github.com/scrapnode/kanthor/dataplane/server/grpc/protos";

service Msg {
  rpc Put(MsgPutReq) returns (MsgPutRes) {}
}

message MsgPutReq {
  string type = 2;
  map<string, string> headers = 3;
  string body = 4;
  map<string, string> metadata = 5;
}

message MsgPutRes {
  string id = 1;
  string bucket = 2;
  int64 timestamp = 3;
}